# mistral-fine-tuning

./: .gitignore  README.md  pipeline.pptx  pyproject.toml
src/: Step 2 - synthetize news.py  Step 3 - critique.py  Step 4 - specific-style.py  concatenate.py  mistral_finetune_api.ipynb  mistral_finetune_api_news.ipynb  mistral_finetune_api_video.ipynb  news_chunk_eval.jsonl  news_chunk_train.jsonl  prompts.py  to_jsonl.py  utils.py  videos_chunk_eval.jsonl
src/tests/: result_new_news_to_critique_58e68d1d.json  result_new_news_to_critique_58e68d1d.jsonl
src/video_script/: Step_1_-_extract_video_details.py  Step_2_-_synthesize_video_script.py  Step_3_-_critic_video_script.py  Step_4_-_enforce_specific_style.py  Step_5_-_measure_progress.py  Step_5a_-_print_score.py  Step_6_-_final_enhancement_test.py  Step_6_-_test_fine-tuned_model.py  Step_7_-_critic_enhanced_video_script.py  check_video_title_unicity.py  concatenate_generated_enhanced_video.py  concatenate_generated_video_conversation.py  concatenate_generated_video_to_critique.py  remove_negative_enhanced_script.py  step_8_-_statistics.py  utils_videos.py  video_prompt.py
src/video_script/data/: deeplearning.json  deeplearning2.json  enhanced_video_critics_mistral-large-latest.jsonl  enhanced_video_critics_mistral-small-latest.jsonl  enhanced_videos_fine-tuned.jsonl  generated_enhanced_video.jsonl
src/video_script/data/results/: enhanced_video_critics_fine-tuned.jsonl  enhanced_videos_mistral-large-latest.jsonl  generated_enhanced_video_scored.jsonl  generated_video_critique.jsonl  videos_details.jsonl  (+2 more)
